--- a/order-for-home/index.html
+++ b/order-for-home/index.html
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -207,7 +207,7 @@
 </div>
 <div class="image__title-position fill-absolute">
 <div class="image__title">Delivery</div>
- </div>
+</div>
 </div>
 <div class="cell__info-position">
 <div class="cell__info">
@@ -498,7 +498,7 @@ Can you redeem gift cards and e-vouchers online?
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
