--- a/frequently-asked-questions/index.html
+++ b/frequently-asked-questions/index.html
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -309,8 +309,8 @@ Our Salt &amp; Pepper Squid! Sweet, delicate squid in a crunchy and gently spicy
 <div class="faq__title">
 <div class="faq__icon"></div>
 Do you have a vegan and vegetarian menu?
- </div>
-<div class="faq__collapse">
+</div>
+ <div class="faq__collapse">
 <div class="faq__content">
 Yes, we have a large selection of dishes suitable for both vegetarians and vegans. Please see our<a href="https://www.gigglingsquid.com/menu/"> vegan and vegetarian menu here</a>.
 </div>
@@ -722,7 +722,7 @@ This is at select restaurants including&#8230;
 Do you have outdoor seating at your restaurants?
 </div>
 <div class="faq__collapse">
-<div class="faq__content">
+ <div class="faq__content">
 Most of our restaurants have outdoor seating but they are not heated so tend to be open when the weather is milder. Please look at the <a href="https://www.gigglingsquid.com/restaurant/">restaurant page</a> to see if they have outdoor seating.
 </div>
 </div>
@@ -1017,7 +1017,7 @@ Our packaging is made of recyclable plastic PP5, which is collectable by many lo
 <div class="faq__background">
 <div class="faq__title">
 <div class="faq__icon"></div>
-What are you doing for the environment?
+ What are you doing for the environment?
 </div>
 <div class="faq__collapse">
 <div class="faq__content">
@@ -1241,7 +1241,7 @@ All our food waste is collected and used in anaerobic digestion, a process which
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
