--- a/restaurant/maidstone/index.html
+++ b/restaurant/maidstone/index.html
@@ -121,7 +121,7 @@
 <a class="right-nav__link" href="https://www.gigglingsquid.com/frequently-asked-questions/">
 <span class="hover-underline --purple">FAQs</span>
 </a>
- </nav>
+</nav>
 <nav class="right-nav__cell right-nav__cell--menu-3">
 <a class="right-nav__link" href="https://www.gigglingsquid.com/allergies/">
 <span class="hover-underline --purple">Allergies</span>
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -163,7 +163,7 @@
 <p class="hero__tagline">Delicious Thai Food</p>
 <h1 class="hero__title">Maidstone</h1>
 <div class="hero__action-tag">
-<a class="hero__arrow-link" href="https://www.gigglingsquid.com/restaurant/">Change Location</a>
+<a class="hero__arrow-link" href="https://www.gigglingsquid.com/restaurant/">Change Location</a><span class="hero__tag">Open </span>
 </div>
 </div>
 <div class="hero__location-details">
@@ -495,7 +495,7 @@ Google Maps
 </a>
 <a class="social-link" href="https://www.linkedin.com/company/gigglingsquid" target="_blank">
 <i class="fab fa-linkedin-in"></i>
-</a> </div>
+</a>  </div>
 <nav class="top-nav__cell top-nav__cell--menu-1">
 <a class="top-nav__link hover-underline --purple" data-book-button>Book a table</a>
 <br>
@@ -539,7 +539,7 @@ Google Maps
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
