--- a/menu/bath/index.html
+++ b/menu/bath/index.html
@@ -132,7 +132,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -385,7 +385,7 @@
 <br>
 </nav>
 <nav class="top-nav__cell top-nav__cell--menu-2">
-<a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/menu/">Menu</a>
+ <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/menu/">Menu</a>
 <br>
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/gift-cards/">Gift Cards</a>
 <br>
@@ -419,7 +419,7 @@
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/gender-pay-gap-report/">Gender Pay Gap</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
