--- a/terms-conditions/index.html
+++ b/terms-conditions/index.html
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -249,7 +249,7 @@
 <li>Gift cards and e-vouchers cannot be returned or refunded, except in accordance with your legal rights.</li>
 <li>Giggling Squid cannot accept responsibility if your voucher is lost, stolen or damaged. It will not be replaced or its value refunded in any of these circumstances.</li>
 </ul>
-<p>For customer enquiries please email <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#3d4b52485e55584f4e484d4d524f497d5a545a5a5154535a4e4c485459135e5250"><span class="__cf_email__" data-cfemail="15637a60767d7067666065657a676155727c7272797c7b726664607c713b767a78">[email&#160;protected]</span></a></p>
+<p>For customer enquiries please email <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#a3d5ccd6c0cbc6d1d0d6d3d3ccd1d7e3c4cac4c4cfcacdc4d0d2d6cac78dc0ccce"><span class="__cf_email__" data-cfemail="04726b71676c6176777174746b767044636d6363686d6a637775716d602a676b69">[email&#160;protected]</span></a></p>
 <h2>Customer satisfaction survey gift card competition</h2>
 <ul>
 <li>Customers who shared feedback either via a post dining / ordering email or through our website will be automatically entered into a monthly prize draw to win a £100 gift e-voucher.</li>
@@ -335,7 +335,7 @@
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
