--- a/privacy/index.html
+++ b/privacy/index.html
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -212,7 +212,7 @@
 <div class="cell">
 <h2>Summary</h2>
 <p>Chokdee Ltd, trading under the name Giggling Squid, understands that your information is important and in the wrong hands it poses a risk to your rights and freedoms. This privacy policy outlines how we gather and use personal information and what your rights are.</p>
-<p>If you have any questions or queries regarding this policy, please contact <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#4723372807202e20202b2e29203436322e236924282a"><span class="__cf_email__" data-cfemail="6400140b24030d0303080d0a031715110d004a070b09">[email&#160;protected]</span></a>.</p>
+<p>If you have any questions or queries regarding this policy, please contact <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#87e3f7e8c7e0eee0e0ebeee9e0f4f6f2eee3a9e4e8ea"><span class="__cf_email__" data-cfemail="6f0b1f002f08060808030601081c1e1a060b410c0002">[email&#160;protected]</span></a>.</p>
 <h2>Privacy legislation</h2>
 <p><span data-contrast="auto">Chokdee Ltd is subject to UK and European privacy legislation, which regulates the use of individuals’ personal information. This legislation imposes specific requirements on Chokdee Ltd. All personal information supplied by you to us online via the website will be protected by us in accordance with current applicable privacy legislation and the terms of this Policy.</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
 <h2>When we collect your information:</h2>
@@ -452,7 +452,7 @@
 <p><span data-contrast="auto">Marketing cookies are used to track visitors across websites. The intention is to display ads that are relevant and engaging for the individual user and thereby more valuable for publishers and third party advertisers.</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
 <h3>Your rights</h3>
 <p><span data-contrast="auto">By using this website, you consent to the collection and use of your personal information by Giggling Squid in accordance with the terms of this Privacy Policy.</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
-<p><span data-contrast="auto">You can email </span><a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#a0c4d0cfe0c7c9c7c7c9cec7d3d1d5c9c48ec3cfcd"><span data-contrast="none"><span class="__cf_email__" data-cfemail="ef8b9f80af888688888681889c9e9a868bc18c8082">[email&#160;protected]</span></span></a><span data-contrast="auto"> with the following requests using the subject line ‘subject access request’:</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
+<p><span data-contrast="auto">You can email </span><a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#bedaced1fed9d7d9d9d7d0d9cdcfcbd7da90ddd1d3"><span data-contrast="none"><span class="__cf_email__" data-cfemail="4226322d02252b25252b2c253133372b266c212d2f">[email&#160;protected]</span></span></a><span data-contrast="auto"> with the following requests using the subject line ‘subject access request’:</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
 <ul>
 <li>
 <span data-contrast="auto">Request a copy of your data</span><span data-ccp-props="{&quot;134233279&quot;:true,&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span>
@@ -476,7 +476,7 @@
 <span data-contrast="auto">Withdraw consent to process your data at any time </span><span data-ccp-props="{&quot;134233279&quot;:true,&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span>
 </li>
 </ul>
-<p><span data-contrast="auto">If you wish to delete your Resdiary account, you must contact </span><a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#4e3d3b3e3e213c3a0e3c2b3d2a272f3c37602d2123"><span data-contrast="none"><span class="__cf_email__" data-cfemail="87f4f2f7f7e8f5f3c7f5e2f4e3eee6f5fea9e4e8ea">[email&#160;protected]</span></span></a><span data-contrast="auto">. ResDiary do not delete bookings on behalf of restaurants as they are the data controller for their data. </span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
+<p><span data-contrast="auto">If you wish to delete your Resdiary account, you must contact </span><a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#681b1d1818071a1c281a0d1b0c01091a11460b0705"><span data-contrast="none"><span class="__cf_email__" data-cfemail="b7c4c2c7c7d8c5c3f7c5d2c4d3ded6c5ce99d4d8da">[email&#160;protected]</span></span></a><span data-contrast="auto">. ResDiary do not delete bookings on behalf of restaurants as they are the data controller for their data. </span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
 <p><span data-contrast="auto">You are legally allowed to raise a complaint about us with the Information Commissioner’s Office, take us or the ICO to court. If you wish to do this, then please follow this link: <a href="https://ico.org.uk/concerns/" target="_blank" rel="noopener">https://ico.org.uk/concerns/</a></span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
 <p><span data-contrast="auto">Additionally, we must inform you:</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
 <ul>
@@ -489,7 +489,7 @@
 </ul>
 <h2>How to contact us</h2>
 <p><span data-contrast="auto">Postal address: 1 Bishops Wharf, Walnut Tree Close, Guildford, GU1 4UP.</span><span data-ccp-props="{&quot;201341983&quot;:0,&quot;335551550&quot;:6,&quot;335551620&quot;:6,&quot;335559739&quot;:160,&quot;335559740&quot;:240}"> </span></p>
-<p><span data-contrast="auto">Email: <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#fe9a8e91be99979999929790998d8f8b979ad09d9193" target="_blank" rel="noopener"><span class="__cf_email__" data-cfemail="a3c7d3cce3c4cac4c4cfcacdc4d0d2d6cac78dc0ccce">[email&#160;protected]</span></a></span></p>
+<p><span data-contrast="auto">Email: <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#d0b4a0bf90b7b9b7b7bcb9beb7a3a1a5b9b4feb3bfbd" target="_blank" rel="noopener"><span class="__cf_email__" data-cfemail="e581958aa5828c8282898c8b829694908c81cb868a88">[email&#160;protected]</span></a></span></p>
 </div>
 </div>
 </section>
@@ -563,7 +563,7 @@
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
