--- a/restaurant/harborne/index.html
+++ b/restaurant/harborne/index.html
@@ -74,7 +74,7 @@
 <a class="left-nav__link" href="https://www.gigglingsquid.com/order-for-home/">
 <span class="hover-underline">Order For Home</span>
 </a>
- <a class="left-nav__link" href="https://www.gigglingsquid.com/menu/">
+<a class="left-nav__link" href="https://www.gigglingsquid.com/menu/">
 <span class="hover-underline">Menus</span>
 </a>
 <a class="left-nav__link" href="https://www.gigglingsquid.com/restaurant/">
@@ -139,7 +139,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -258,7 +258,7 @@ Google Maps
 </div>
 </div>
 </div>
-<div class="cell grid">
+ <div class="cell grid">
 <div class="image">
 <div class="image__background"></div>
 <div class="image__clip hairline-border">
@@ -474,7 +474,7 @@ Google Maps
 <div class="top-nav">
 <div class="grid top-nav__background">
 <div class="top-nav__cell top-nav__cell--social">
-<a class="social-link" href="https://www.facebook.com/gigglingsquid" target="_blank">
+ <a class="social-link" href="https://www.facebook.com/gigglingsquid" target="_blank">
 <i class="fab fa-facebook-f"></i>
 </a>
 <a class="social-link" href="https://www.twitter.com/gigglingsquid" target="_blank">
@@ -529,7 +529,7 @@ Google Maps
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
