--- a/frequently-asked-questions/index.html
+++ b/frequently-asked-questions/index.html
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -1017,7 +1017,7 @@ Our packaging is made of recyclable plastic PP5, which is collectable by many lo
 <div class="faq__background">
 <div class="faq__title">
 <div class="faq__icon"></div>
- What are you doing for the environment?
+What are you doing for the environment?
 </div>
 <div class="faq__collapse">
 <div class="faq__content">
@@ -1094,7 +1094,7 @@ We do not purchase any single use plastic for use in our restaurant and where po
 <div class="faq">
 <div class="faq__background">
 <div class="faq__title">
-<div class="faq__icon"></div>
+ <div class="faq__icon"></div>
 What do you do with food waste?
 </div>
 <div class="faq__collapse">
@@ -1241,7 +1241,7 @@ All our food waste is collected and used in anaerobic digestion, a process which
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
