--- a/terms-conditions/index.html
+++ b/terms-conditions/index.html
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -193,7 +193,7 @@
 <div class="sticky-nav__absolute">
 <div class="sticky-nav__sticky">
 <div class="sticky-nav__content">
- <div class="sticky-nav__title">Contents</div>
+<div class="sticky-nav__title">Contents</div>
 <ol class="sticky-nav__list"></ol>
 </div>
 </div>
@@ -249,7 +249,7 @@
 <li>Gift cards and e-vouchers cannot be returned or refunded, except in accordance with your legal rights.</li>
 <li>Giggling Squid cannot accept responsibility if your voucher is lost, stolen or damaged. It will not be replaced or its value refunded in any of these circumstances.</li>
 </ul>
-<p>For customer enquiries please email <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#b3c5dcc6d0dbd6c1c0c6c3c3dcc1c7f3d4dad4d4dfdaddd4c0c2c6dad79dd0dcde"><span class="__cf_email__" data-cfemail="43352c36202b2631303633332c313703242a24242f2a2d243032362a276d202c2e">[email&#160;protected]</span></a></p>
+<p>For customer enquiries please email <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#7b0d140e18131e09080e0b0b14090f3b1c121c1c1712151c080a0e121f55181416"><span class="__cf_email__" data-cfemail="e1978e9482898493929491918e9395a1868886868d888f869290948885cf828e8c">[email&#160;protected]</span></a></p>
 <h2>Customer satisfaction survey gift card competition</h2>
 <ul>
 <li>Customers who shared feedback either via a post dining / ordering email or through our website will be automatically entered into a monthly prize draw to win a £100 gift e-voucher.</li>
@@ -335,7 +335,7 @@
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
