--- a/terms-conditions/index.html
+++ b/terms-conditions/index.html
@@ -146,7 +146,6 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -249,7 +248,7 @@
 <li>Gift cards and e-vouchers cannot be returned or refunded, except in accordance with your legal rights.</li>
 <li>Giggling Squid cannot accept responsibility if your voucher is lost, stolen or damaged. It will not be replaced or its value refunded in any of these circumstances.</li>
 </ul>
-<p>For customer enquiries please email <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#70061f0513181502030500001f020430171917171c191e1703010519145e131f1d"><span class="__cf_email__" data-cfemail="76001903151e13040503060619040236111f11111a1f18110507031f125815191b">[email&#160;protected]</span></a></p>
+<p>For customer enquiries please email <a href="https://www.gigglingsquid.com/cdn-cgi/l/email-protection#6e18011b0d060b1c1d1b1e1e011c1a2e09070909020700091d1f1b070a400d0103"><span class="__cf_email__" data-cfemail="f6809983959e938485838686998482b6919f91919a9f98918587839f92d895999b">[email&#160;protected]</span></a></p>
 <h2>Customer satisfaction survey gift card competition</h2>
 <ul>
 <li>Customers who shared feedback either via a post dining / ordering email or through our website will be automatically entered into a monthly prize draw to win a £100 gift e-voucher.</li>
@@ -305,7 +304,9 @@
 <br>
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/gift-cards/">Gift Cards</a>
 <br>
-<a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/news/">News</a>
+ <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/news/">News</a>
+<br>
+<a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/charity/">Charity</a>
 <br>
 </nav>
 <nav class="top-nav__cell top-nav__cell--menu-3">
@@ -334,8 +335,6 @@
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
